# CG_SHOP_2025_1

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  data.json  pro12.cpp  proj1.cpp  project.cpp
includes/utils/: Custom_Constrained_Delaunay_triangulation_2.h  functions.cpp  functions.h
tests/: test_doc.txt
